@@ -35,7 +35,7 @@ Adapter classes
   PACKAGE_SIGNING_INFO_UNAVAILABLE
   EXECUTION_WITHHELD_INSTALLER
 - Route strictness:
-  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header structure, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/runtime marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). Strict mode also rejects partial ZIP/AR metadata even when required package markers are present and requires canonical package-marker paths (nested lookalike marker paths do not satisfy strict package structure checks). `.msix` strict mode requires Appx manifest plus `[Content_Types].xml` OPC structure evidence and a minimum structural file size, `.nupkg` and `.jar` strict mode requires package-specific ZIP structure plus a minimum structural file size, `.whl` strict mode requires `.dist-info` `METADATA`, `WHEEL`, and `RECORD` structure evidence, `.deb` strict mode requires required Debian package entries plus a minimum structural file size, `.exe` strict mode requires valid PE header structure plus a minimum structural file size, `.msi` strict mode requires valid CFB header structure fields plus a minimum structural file size, `.rpm` strict mode requires lead/header markers plus a minimum structural file size, `.appimage` strict mode requires ELF header plus AppImage runtime marker at canonical offset and a minimum structural file size, `.pkg` strict mode requires minimally valid XAR header fields and a minimum structural file size, and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512) plus a minimum structural file size. Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
+  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header structure, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/runtime marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). Strict mode also rejects partial ZIP/AR metadata even when required package markers are present and requires canonical package-marker paths (nested lookalike marker paths do not satisfy strict package structure checks), including unique marker cardinality for strict ZIP structures (ambiguous duplicate required markers fail closed). `.msix` strict mode requires Appx manifest plus `[Content_Types].xml` OPC structure evidence and a minimum structural file size, `.nupkg` and `.jar` strict mode requires package-specific ZIP structure plus a minimum structural file size, `.whl` strict mode requires `.dist-info` `METADATA`, `WHEEL`, and `RECORD` structure evidence, `.deb` strict mode requires required Debian package entries plus a minimum structural file size, `.exe` strict mode requires valid PE header structure plus a minimum structural file size, `.msi` strict mode requires valid CFB header structure fields plus a minimum structural file size, `.rpm` strict mode requires lead/header markers plus a minimum structural file size, `.appimage` strict mode requires ELF header plus AppImage runtime marker at canonical offset and a minimum structural file size, `.pkg` strict mode requires minimally valid XAR header fields and a minimum structural file size, and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512) plus a minimum structural file size. Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
 
 3) extension
 - Formats: .crx, .vsix, .xpi, unpacked extension folder with manifest.json
